--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ body {
 
 .spawn-btn {
     margin-top: 50px;
+
+    border-radius: 5px;
+
+    background-color: rgb(228, 228, 115);
+
+    font-family: 'JetBrains Mono';
 }
 
 .container {
@@ -43,6 +49,15 @@ body {
     margin: 50px;
 }
 
+.node{
+    height: 300px;
+    width: 300px;
+}
+
 .photo {
-    width: 100%;
+    height: 300px;
+    width: 300px;
+
+    border: solid 1px;
+    border-color: black;
 }
