--- a/style.css
+++ b/style.css
@@ -24,30 +24,15 @@ body {
     background-color: rgb(45, 45, 45);
 }
 
-.cont-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.spawn-btn {
-    margin-top: 50px;
-
-    border-radius: 5px;
-
-    background-color: rgb(228, 228, 115);
-
-    font-family: 'JetBrains Mono';
-    font-size: 20px;
-}
-
 .container {
     display: grid;
     align-content: center;
     justify-content: center;
     grid-template-columns: repeat(3, 300px);
 
-    margin: 50px;
+    transition: ease-in-out 2s;
+
+    margin: 0px;
 }
 
 .node {
@@ -203,4 +188,63 @@ body {
 .arrow {
     height: 340px;
     width: 300px;
+}
+
+.txt-blue {
+    color: blue;
+}
+
+.txt-red {
+    color: red;
+}
+
+.buttons {
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    margin: 30 0 ;
+}
+
+ul {
+    padding: 0;
+    list-style: none;
+    display: inline;
+}
+
+li {
+    margin: 40px;
+    display: inline;
+    font-size: 20px;
+}
+
+.hide {
+    display: none;
+    animation-name: hide;
+    animation-duration: 2s;
+}
+
+@keyframes hide {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+.view {
+    display: block;
+    animation-name: view;
+    animation-duration: 2s;
+}
+
+@keyframes view {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
