--- a/style.css
+++ b/style.css
@@ -84,9 +84,11 @@ body {
     position: sticky;
     top: 100%;
 
-    width: 70px;
+    width: auto;
 
     margin-left: 20px;
+    margin-bottom: 20px;
+    padding: 0 10px;
 
     border: solid 2px;
     border-radius: 5px;
