--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
     --node-height: 340px;
     --node-width: 300px;
+    --main-color: #403C49;
     --node-border-color: rgb(182, 27, 0);
     --buttons-color: #a2c617;
     --button-border-color: rgb(143, 58, 146);
@@ -32,7 +33,7 @@ body {
     justify-content: center;
 
     height: 80px;
-    background-color: rgb(45, 45, 45);
+    background-color: var(--main-color);
 }
 
 .buttons {
@@ -76,7 +77,7 @@ body {
 
     border: solid 3px;
     border-radius: 10px;
-    border-color: var(--node-border-color);
+    border-color: var(--main-color);
 }
 
 .node:hover .photo {
