--- a/style.css
+++ b/style.css
@@ -15,16 +15,22 @@
 
 body {
     margin: 0;
-    /* background-color: rgb(85, 85, 85); */
 }
 
 .text {
     font-family: "JetBrains Mono";
 }
 
-.nav-text {
-    color: rgb(228, 228, 115);
+.main-color-bck{
+    background-color: var(--main-color);
+}
+
+.header-text {
     font-size: 30px;
+}
+
+.this-page-color {
+    color: var(--buttons-color);
 }
 
 .nav {
@@ -33,8 +39,20 @@ body {
     justify-content: center;
 
     height: 80px;
-    background-color: var(--main-color);
 }
+
+.href-cart,
+.href-cart:active,
+.href-cart:visited,
+.href-cart:hover{
+    text-decoration: none;
+    color: rgb(228, 228, 115);
+}
+
+.cart {
+    margin-left: 20px;
+}
+
 
 .buttons {
     display: flex;
@@ -77,7 +95,7 @@ body {
 
     border: solid 3px;
     border-radius: 10px;
-    border-color: var(--main-color);
+    border-color: var(--main-color  );
 }
 
 .node:hover .photo {
