--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --main-color: #403C49;
     --node-border-color: rgb(182, 27, 0);
     --buttons-color: #a2c617;
+    --button-color-on-hover: #d5fc3d;
     --button-border-color: rgb(143, 58, 146);
     --button-box-shadow: rgb(161, 161, 161);
     --button-text-color: #ffffff;
@@ -22,7 +23,7 @@ body {
     font-family: "JetBrains Mono";
 }
 
-.Reem-Kufi{
+.Reem-Kufi {
     font-family: "Reem Kufi";
 }
 
@@ -46,23 +47,28 @@ body {
     font-size: 30px;
 }
 
-.main-color-bck{
+.main-color-bck {
     background-color: var(--main-color);
 }
 
-.bck-delete-color{
+.bck-delete-color {
     background-color: var(--delete-color);
 }
 
-.bck-button-color{
+.bck-button-color {
+    transition: ease-in-out 0.2s;
     background-color: var(--buttons-color);
 }
 
-.delete-color{
+.bck-button-color:hover {
+    background-color: #b7cf52;
+}
+
+.delete-color {
     color: var(--delete-color);
 }
 
-.main-color{
+.main-color {
     color: var(--main-color);
 }
 
@@ -86,23 +92,23 @@ body {
     float: right;
 }
 
-.margin0{
+.margin0 {
     margin: 0;
 }
 
-.margin-left-rigtt-20{
+.margin-left-rigtt-20 {
     margin: 0 20px;
 }
 
-.border{
+.border {
     border: 1px solid rgba(71, 71, 71, 1);
 }
 
-.padding-for-x{
+.padding-for-x {
     padding: 0 6px;
 }
 
-.padding-for-cart{
+.padding-for-cart {
     padding: 6.5px 5px;
 }
 
@@ -110,8 +116,7 @@ body {
     position: sticky;
 }
 
-.hover-pointer {
-}
+.hover-pointer {}
 
 .hover-pointer:hover {
     cursor: pointer;
@@ -128,7 +133,7 @@ body {
 .href-cart,
 .href-cart:active,
 .href-cart:visited,
-.href-cart:hover{
+.href-cart:hover {
     text-decoration: none;
     color: rgb(228, 228, 115);
 }
@@ -213,11 +218,11 @@ body {
     font-weight: bold;
 }
 
-.btn-margin{
+.btn-margin {
     margin-top: -4px;
 }
 
-.btn-cont{
+.btn-cont {
     display: flex;
     justify-content: space-between;
     align-items: center;
