--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body {
     font-family: "Reem Kufi";
 }
 
+.bold{
+    font-weight: bold;
+}
+
 .font-size-14 {
     font-size: 14px;
 }
@@ -105,7 +109,7 @@ body {
 }
 
 .padding-for-x {
-    padding: 0 6px;
+    padding: 0px 8px;
 }
 
 .padding-for-cart {
@@ -248,6 +252,11 @@ body {
 .arrow {
     height: 100%;
     width: 100%;
+}
+
+.amount-cont{
+    width: 30px;
+    text-align: start;
 }
 
 /* * MODALS */
