--- a/style.css
+++ b/style.css
@@ -345,3 +345,19 @@ body {
     text-decoration: none;
     cursor: pointer;
 }
+
+.sum-cart{
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 20px 0 0 0;
+}
+
+.footer {
+    width: 100%;
+
+    margin: 100px 0 0 0;
+}
