--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ body {
     font-size: 24px;
 }
 
+.font-size-30 {
+    font-size: 30px;
+}
+
 .header-text {
     font-size: 30px;
 }
@@ -114,6 +118,10 @@ body {
 
 .padding-for-cart {
     padding: 6.5px 5px;
+}
+
+.padding-5 {
+    padding: 5px;
 }
 
 .sticky {
