--- a/style.css
+++ b/style.css
@@ -31,12 +31,28 @@ body {
     font-weight: bold;
 }
 
+.underline {
+    text-decoration: underline;
+}
+
+.underline:hover {
+    text-decoration: none;
+}
+
 .font-size-14 {
     font-size: 14px;
 }
 
 .font-size-16 {
     font-size: 16px;
+}
+
+.font-size-18 {
+    font-size: 18px;
+}
+
+.font-size-20 {
+    font-size: 20px;
 }
 
 .font-size-21 {
@@ -80,20 +96,16 @@ body {
     color: var(--main-color);
 }
 
-.underline {
-    text-decoration: underline;
-}
-
-.underline:hover {
-    text-decoration: none;
-}
-
 .this-page-color {
     color: var(--buttons-color);
 }
 
 .black-color {
     color: rgba(71, 71, 71, 1)
+}
+
+.grey-color {
+    color: rgba(71, 71, 71, 0.8);
 }
 
 .float-right {
@@ -206,11 +218,12 @@ body {
 
 .node:hover {
     box-shadow: 0px 0px 6px rgba(71, 71, 71, 0.4);
+    height: auto;
 }
 
 .node:hover .photo {
-    opacity: 0.3;
-    filter: blur(2px);
+    opacity: 0.8;
+    filter: blur(1px);
 }
 
 .node:hover .text-on-photo {
@@ -222,20 +235,17 @@ body {
     opacity: 1;
     transition: .5s ease;
 
-    height: 100%;
+    height: 300px;
     width: 100%;
 
     border-radius: 10px;
 }
 
 .text-on-photo {
-    transition: .5s ease;
+    text-align: start;
     opacity: 0;
 
-    height: calc(var(--node-height) - 50px);
-
-    margin: 0 10px 0 10px;
-    margin-top: calc(-1 * var(--node-height) + 10px);
+    margin: 10px 20px;
 }
 
 .price {
