--- a/style.css
+++ b/style.css
@@ -19,15 +19,24 @@ body {
     margin: 0;
 }
 
+.bck{
+    position: fixed;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/layered-waves-haikei.svg);
+    background-size: cover;
+}
+
 .text {
     font-family: "JetBrains Mono", sans-serif;
 }
 
 .Reem-Kufi {
-    font-family: "Reem Kufi" , sans-serif;
+    font-family: "Reem Kufi", sans-serif;
 }
 
-.bold{
+.bold {
     font-weight: bold;
 }
 
@@ -132,8 +141,33 @@ body {
     margin-top: 7px;
 }
 
+.margin-top-15 {
+    margin-top: 15px;
+}
+
+.margin-top-20 {
+    margin-top: 20px;
+}
+
+.margin-bottom-5 {
+    margin-bottom: 5px;
+}
+
+.margin-bottom-10 {
+    margin-bottom: 10px;
+}
+
+.margin-bottom-20 {
+    margin-bottom: 20px;
+}
+
 .margin-left-rigtt-20 {
-    margin: 0 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.padding-left-rigtt-20 {
+    padding: 0 20px;
 }
 
 .border {
@@ -164,11 +198,17 @@ body {
     margin-right: 5px;
 }
 
-.row{
+.row {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
+}
+
+.centre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hover-pointer {}
@@ -214,18 +254,20 @@ body {
 }
 
 .container {
-    display: grid;
-    align-content: center;
-    justify-content: center;
-    grid-template-columns: repeat(3, auto);
+    width: 960px;
+    display: table;
 }
 
 .node {
+    display: inline-block;
+    vertical-align: top;
+    float: none;
+    justify-content: space-between;
+
     position: relative;
     z-index: 1;
     opacity: 1;
 
-    height: var(--node-height);
     width: var(--node-width);
 
     margin: 5px 10px;
@@ -245,7 +287,7 @@ body {
     border-color: rgba(71, 71, 71, 0.4);
 }
 
-.node-arrow:hover{
+.node-arrow:hover {
     box-shadow: 0px 0px 6px rgba(71, 71, 71, 0.4);
 }
 
@@ -303,7 +345,9 @@ body {
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    margin: -3px 20px 0px 20px;
+    margin-top: -3px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .arrow {
@@ -311,7 +355,7 @@ body {
     width: 100%;
 }
 
-.amount-cont{
+.amount-cont {
     width: 30px;
     text-align: start;
 }
@@ -403,7 +447,7 @@ body {
     cursor: pointer;
 }
 
-.sum-cart{
+.sum-cart {
     width: 100%;
 
     display: flex;
