--- a/style.css
+++ b/style.css
@@ -19,15 +19,6 @@ body {
     margin: 0;
 }
 
-.bck {
-    position: fixed;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    background-image: url(/images/layered-waves-haikei.svg);
-    background-size: cover;
-}
-
 .text {
     font-family: "JetBrains Mono", sans-serif;
 }
@@ -315,6 +306,8 @@ body {
 }
 
 .photo {
+    transition: cubic-bezier(0.4, 0, 1, 1) 0.2s;
+
     display: block;
     opacity: 1;
     transition: .5s ease;
@@ -323,6 +316,10 @@ body {
     width: 100%;
 
     border-radius: 10px;
+}
+
+.photo:hover {
+    transform: scale(1.15);
 }
 
 .text-on-photo {
