--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ body {
     transition: cubic-bezier(0.4, 0, 1, 1) 0.2s;
 
     display: inline-block;
-    vertical-align: top;
+    vertical-align: bottom;
     float: none;
     justify-content: space-between;
 
