--- a/style.css
+++ b/style.css
@@ -373,6 +373,25 @@ body {
     margin: 20px 0;
 }
 
+.top-ancor{
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+    display: none;
+}
+
+.up-arrow{
+    transition: cubic-bezier(0.58, 0.15, 0.79, 0.5);
+    transition-duration: 0.5s;
+
+    animation: 3s linear 1s slidein;
+
+    display: none;
+    position: fixed;
+    top: calc(100% - 40px);
+    left: calc(100% - 40px);
+}
 
 /* * MODALS */
 
