--- a/style.css
+++ b/style.css
@@ -152,6 +152,10 @@ body {
     margin-bottom: 20px;
 }
 
+.margin-left-20{
+    margin-left: 20px;
+}
+
 .margin-left-rigtt-20 {
     margin-left: 20px;
     margin-right: 20px;
